syntax = "proto3";

package protos;

service Category {
    rpc GetCategoryInfo (cQueryRequest) returns (categoryInfo) {}
    rpc GetCategoryList (cQueryRequest) returns (categoryList) {}
}

message cQueryRequest {
    int64 id = 1;
    int64 limit = 2;
    int64 page = 3;
}

message categoryInfo {
    int64 id = 1;
    string title = 2;
    int64 parent_id = 3;
    int64 sort = 4;
    string created_at = 5;
    string updated_at = 6;
}

message categoryList {
    repeated categoryInfo list = 1;
}